--- a/Samples/TypeScript/Demo/index.html
+++ b/Samples/TypeScript/Demo/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>TypeScript HTML App</title>
-  <!-- <style>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>TypeScript HTML App</title>
+    <!-- <style>
     html, body {
         margin: 0;
         overflow: hidden;
@@ -15,14 +15,14 @@
         display: block;
     }
   </style> -->
-  <!-- Pollyfill script -->
-  <script src="https://unpkg.com/core-js-bundle@3.6.1/minified.js"></script>
-  <!-- Live2DCubismCore script -->
-  <script src = "../../../Core/live2dcubismcore.js"></script>
-  <!-- Build script -->
-  <script defer src = "./dist/bundle.js"></script>
-</head>
-<body>
-  <div id="app"></div>
-</body>
+    <!-- Pollyfill script -->
+    <script src="https://unpkg.com/core-js-bundle@3.6.1/minified.js"></script>
+    <!-- Live2DCubismCore script -->
+    <script src="./dist/live2dcubismcore.min.js"></script>
+    <!-- Build script -->
+    <script defer src="./dist/bundle.js"></script>
+  </head>
+  <body>
+    <div id="app"></div>
+  </body>
 </html>
