--- a/Samples/TypeScript/Demo/index.html
+++ b/Samples/TypeScript/Demo/index.html
@@ -15,14 +15,16 @@
         display: block;
     }
   </style> -->
-    <!-- Pollyfill script -->
-    <script src="https://unpkg.com/core-js-bundle@3.6.1/minified.js"></script>
-    <!-- Live2DCubismCore script -->
-    <script src="./dist/live2dcubismcore.min.js"></script>
-    <!-- Build script -->
-    <script defer src="./dist/bundle.js"></script>
   </head>
   <body>
     <div id="app"></div>
   </body>
+
+  <!-- Pollyfill script -->
+  <!-- <script defer src="https://unpkg.com/core-js-bundle@3.6.1/minified.js"></script> -->
+  <!-- Live2DCubismCore script -->
+  <!-- <script async src="./dist/core.js"></script> -->
+  <!-- Build script -->
+  <script src="./dist/bundle.js"></script>
+
 </html>
